--- a/src/index.html
+++ b/src/index.html
@@ -1,62 +1,86 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <script src="./js/script.js" ></script>
-    <link rel="stylesheet" href="./css/nullstyle.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/btn.css">
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Manual</title>
+	<script src="./js/script.js" ></script>
+	<link rel="stylesheet" href="./css/nullstyle.css">
+	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="./css/btn.css">
+	<meta charset="UTF-8">
+	<meta name="viewport"
+		  content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Manual</title>
 </head>
 <body>
-    <div class="wrapper">
-        <header class="header">
-            <div class="menu">
-                <nav class="menu__bar">
-                    <ul class="nav__links">
-                        <li><a href="#">Shop</a></li>
-                        <li><a href="#">Read</a></li>
-                        <li><a href="#">020 8004 7160</a></li>
-                    </ul>
-                </nav>
-                <a class="manual" href="#">
-                    <img src="/img/icons/manual.svg">
-                </a>
-                <div class="menu__login">
-                    <ul class="nav__links">
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Login</a></li>
-                        <li><a href="/index.html" class="shop-bag">
-                            <img src="./img/icons/bag.svg" alt="shopping bag">
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </header>
-            <div class="intro">
-                <div class="intro__main">
-                    <h1>Men's health. The way it should be.</h1>
-                    <p>No waiting rooms or awkward conversations. Just clinically proven treatments direct to your door with support along the way.</p>
-                    <div class="main__btn">
-                        <a class="btn1" href="#">Get Started</a>
-                        <a class="btn2" href="#">View Treatments</a>
-                    </div>
-                </div>
-            </div>
-        <div class="main">
-            <div class="main__adtgs">
-                <ul>
-                    <li><p>UK licenced medication</p></li>
-                    <li><p>Free, discreet delivery</p></li>
-                    <li><p>Cancel any time</p></li>
-                    <li><p>Ongoing clinician support</p></li>
-                </ul>
-            </div>
-        </div>
-    </div>
+	<div class="wrapper">
+		<header class="header">
+			<div class="menu">
+				<nav class="menu__bar">
+					<ul class="nav__links">
+						<li><a href="#">Shop</a></li>
+						<li><a href="#">Read</a></li>
+						<li><a href="#">020 8004 7160</a></li>
+					</ul>
+				</nav>
+				<a class="manual" href="#">
+					<img src="/src/img/icons/manual.svg">
+				</a>
+				<div class="menu__login">
+					<ul class="nav__links">
+						<li><a href="#">About</a></li>
+						<li><a href="#">Login</a></li>
+						<li><a href="/index.html" class="shop-bag">
+							<img src="./img/icons/bag.svg" alt="shopping bag">
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</header>
+			<div class="intro">
+				<div class="intro__main">
+					<h1>Men's health. The way it should be.</h1>
+					<p>No waiting rooms or awkward conversations. Just clinically proven treatments direct to your door with support along the way.</p>
+					<div class="main__btn">
+						<a class="btn1" href="#">Get Started</a>
+						<a class="btn2" href="#">View Treatments</a>
+					</div>
+				</div>
+			</div>
+		<div class="main">
+			<div class="main__info">
+				<ul>
+					<li><img src="./img/icons/plus.svg"> UK licenced medication</li>
+					<li><img src="./img/icons/box.svg"> Free, discreet delivery</li>
+					<li><img src="./img/icons/X.svg"> Cancel any time</li>
+					<li><img src="./img/icons/face.svg"> Ongoing clinician support</li>
+				</ul>
+			</div>
+			<div class="main__support">
+				<div class="main__title">
+					<h3>Healthcare. Made easy.</h3>
+					<img src="/src/img/icons/star.svg">
+					<p><span>Rated excellent</span> on Trustpilot</p>
+				</div>
+				<ul>
+					<li><img src="/src/img/sup1.svg">
+						<h3>Treatments online</h3>
+						<p>We'll ask you a couple of quick medical questions. Tick the boxes and a clinician will review your answers and issue you a prescription.</p>
+					</li>
+					<li><img src="/src/img/sup2.svg">
+						<h3>Free fast delivery</h3>
+						<p>Your selected treatments will be delivered for free in discreet packaging. There'll be some helpful info included to make sure you get the best out of it.</p>
+					</li>
+					<li><img src="/src/img/sup3.svg">
+						<h3>Clinician support</h3>
+						<p>Chat with a medical expert whenever you need. On the phone or via email. With support throughout your treatment.</p>
+					</li>
+				</ul>
+				<div class="arrow">
+					<img src="./img/icons/arrow3.svg">
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
